# IDCL

./: .gitignore  README.md  pyproject.toml  train.py
dataloader/: dataloader.py
idcl/: __init__.py  loss.py
losses/: CE.py  IDCL.py
models/: __init__.py  model.py
