[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "idcl"
version = "0.1.0"
description = "Inter-Dialog Contrastive Learning loss (ICASSP 2026)"
requires-python = ">=3.8"
dependencies = ["torch>=1.10"]

[tool.setuptools.packages.find]
where = ["."]
include = ["idcl*"]
